Bug 504385 - "Save Link As..." displays broken file picker when file type is unknown on Windows CE, r=vladimir